--- a/blackjack.html
+++ b/blackjack.html
@@ -3,9 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>Black Jack!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/blackjack.css">
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./js/blackjack.js"></script>
   </head>
   <body>
-
+    <div class="container">
+      <header>
+        <img src="./assets/logo.png" height="100px" alt="blackjack">
+      </header>
+      <div class="gameArea">
+        <h2>Shuffle the Cards!</h2>
+        <form class="shuffleForm">
+          <input id="newGameDeckCount" placeholder="how many decks?"></input>
+          <button id="shuffle" onclick="buildDeck(3)">Shuffle</button>
+        </form>
+      </div>
+      <div class="footer">
+        <small>copyright 2017 Briskie Bonertainment</small>
+      </div>
+    </div>
   </body>
 </html>
